# FastAPi_estudos

./: .dockerignore  .env_exemplo  .env_exemplo_compose  Dockerfile  README.md  auth.py  docker-compose.yml  fly.toml  main.py  pyproject.toml
.github/workflows/: pipeline.yaml
.secrets/: SECRET_KEY
alembic/: env.py
alembic/versions/: 0bd7c7cca656_big_bang.py  373f1e22aeb4_tipo_usuarios_seed_py.py  51dc5387141f_coluna_disponibilidade_add_em_reserva.py  5358721a3e58_readicionando_column_disponivel_da_.py  548b121cc959_teste2.py  5cf5ef672fb7_correção_nos_imports_dos_models.py  73cfae358872_teste2.py  8217533bafea_teste.py  85e2fdc23b05_teste3.py  931bc374acfa_entidade_area_add_column_reservada.py  940ba087824d_teste1.py  9df787d2715a_removendo_column_disponivel_da_entidade_.py  a75d906b9e59_teste_alembic.py  a87bad0091a7_bigbang.py  b40928dbafcf_teste.py  c340292a46e3_tipouser_adicionado.py  c38dfb1a9755_user.py  c41337667b66_teste4.py  c56f1aa53999_retirando_ligacao_entre_area_e_usuario_.py  d41d673bb5a9_teste1.py
app/: init_db.py  main.py
app/Exceptions/: exceptions.py
app/area/: area.md  area_controller.py  area_model.py  area_schema.py  crud_area.py
app/config/: auth.py  config.py
app/database/: get_db.py
app/reserva/: crud_reserva.py  crud_reseva.py  reserva.md  reserva_controller.py  reserva_model.py  reserva_schema.py
app/security/: auth.py
app/tipo_usuario/: crud_tipo_usuario.py  tipo_usuario.md  tipo_usuario_controller.py  tipo_usuario_model.py  tipo_usuario_schemas.py
app/usuario/: crud_usuario.py  tipo_usuario_model.py  usuario.md  usuario_controller.py  usuario_model.py  usuario_schemas.py
area/: area_controller.py  area_model.py  area_schema.py  crud_area.py
arealocation/: area_model.py  area_schema.py  crud_area.py
database/: base.py  crud.py  get_db.py  models.py  schemas.py
image/teste_rotas/: teste.md
reserva/: crud_reseva.py  reserva_controller.py  reserva_model.py  reserva_schema.py
security/: auth.py
test/: conftest.py  dados_teste.py  test_app.py  test_area.py  test_auth.py  test_passcrypt.py  test_reserva.py  test_tipos_usuarios.py  test_usuario.py
test/area/: test_area_router.py
test/swagger/: area.md  reserva.md  tipo_usuario.md  usuario.md
test/swegger/: area.md  reserva.md  tipo_usuario.md  usuario.md
test/usuario/: test_tipo_usuario_router.py  (+1 more)
user/: crud_user.py  tipouser_model.py  user_controller.py  user_model.py  user_service.py
(+20 files in other folders)
