[tool.poetry]
name = "auth-fastapi"
version = "0.1.0"
description = ""
authors = ["cleber <cleber.santos.2099@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
pydantic = "^2.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.23.2"
httpx = "^0.25.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
